--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #007B7F; /* Darker Cyan */
-    font-family: "Comic Sans", cursive, sans-serif;
+    font-family: "Comic Sans MS", "Comic Sans", "Comic Neue", "Chalkboard SE", cursive, sans-serif;
     margin: 0;
     padding: 0;
 }
